moveChunk with waitForDelete hangs when range deleter is disabled

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0, 8.2.6, 8.0.21
    • Affects Version/s: 8.3.0-rc0, 8.2.0
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • v8.2, v8.0
    • CAR Team 2025-10-27, CAR Team 2025-11-10
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When executing moveChunk with waitForDelete: true (to wait for orphaned documents to be deleted), and the range deleter is disabled via the corresponding server parameter, the command hangs permanently. Instead, it should return an error notifying the user that the range deleter is disabled and that no orphan deletions will occur.

      This was the originally intended behavior; however, SERVER-77359 unintentionally introduced this change in behavior.

            Assignee:
            Pol Pinol
            Reporter:
            Pol Pinol
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: