SERVER-112357 moveChunk with waitForDelete must not hang when range deleter is disabled (#43521)

GitOrigin-RevId: 3a1586cb4f2b8240eb9fd3d1d187f78571dbaef2